# UVBSP

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
resources/shaders/: BSPshader.frag
shaders/: BSPshader.glsl
src/: app_uvbsp.cpp  imgui_utilites.cpp  imgui_utilites.h  main.cpp  uvbsp.cpp  uvbsp.h  uvsplit.cpp  uvsplit.h  vec2.h  window.cpp  window.h
src/common/: app_abstract.cpp  app_abstract.h  imgui_filesystem.cpp  imgui_filesystem.h  imgui_utilites.cpp  imgui_utilites.h  window.cpp
src/uvbsp/: app_uvbsp.cpp  app_uvbsp.h  uvbsp.cpp  uvbsp.h
